[tool.poetry]
name = "bdd-dyn"
version = "0.1.0"
description = "Library for performing dynamic programming over a Reduced Ordered Decision Diagram (ROBDD)."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
dd = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
